2004-11-05 Alain Magloire
	Framework for code formatter.
	* src/org/eclipse/cdt/internal/coreext/CodeFormatterUtil.java
	* src/org/eclipse/cdt/internal/ui/ICHelpContextIds.java
	* src/org/eclipse/cdt/internal/ui/preferences/CodeFormatterPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/PreferencesMessages.properties
	* src/org/eclipse/cdt/internal/ui/text/CFormattingStrategy.java
	* src/org/eclipse/cdt/ui/dialogs/CodeFormatterBlock.java
	* plugin.xml
	* plugin.properties

2004-11-05 Chris Wiebe

	Fix for 56204 - empty source files are no longer created
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCodeGenerator.java

2004-11-05 Chris Wiebe

	Remove option to use an existing class as enclosing type (defer to future release)
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCodeGenerator.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassWizardMessages.properties

2004-11-04 Alain Magloire
	Fix for 77825 from (Mikhail Voronin)
	* src/org/eclipse/cdt/internal/ui/text/CHelpProviderDescriptor.java

2004-11-02 Tanya Wolff
	Fixed content assist extensibility for 77482 - changed context condition 
	for addProposalsFromCompletionContributors() & 	fixed cursor position
	* src/org/eclipse/cdt/internal/ui/text/contentassist/CCompletionProcessor.java

2004-11-01 Alain Magloire
	Patch from Mikhail Voronin to implement 71240.
	Too many changes to enumerate refer to PR:
		https://bugs.eclipse.org/bugs/show_bug.cgi?id=71240

2004-10-14 Alain Magloire

	Provide the hashCode method.
	* src/org/eclipse/cdt/internal/ui/cview/IncludeRefContainer.java

2004-09-24 Chris Wiebe

	minor icon cleanup
	* icons/full/dtool16/opentype.gif
	* icons/full/etool16/opentype.gif
	* icons/full/obj16/bin_obj.gif
	* plugin.xml

2004-09-24 Chris Wiebe

	remove obsolete classes
	* src/org/eclipse/cdt/internal/ui/wizards/BaseClassSelectionDialog.java