@@ -16,7 +16,6 @@ AbstractFileCreationWizard.title= New File
 AbstractFileCreationWizardPage.error.SelectedProjectError= Error in determining the selected project.
 AbstractFileCreationWizardPage.error.DefaultSourceFolderError= Error in determining the default source folder.
 AbstractFileCreationWizardPage.error.NotAvailableForNonCProjects= The wizard is not available for non C/C++ projects.
-
 AbstractFileCreationWizardPage.sourceFolder.label=Source &Folder:
 AbstractFileCreationWizardPage.sourceFolder.button=Br&owse...
 AbstractFileCreationWizardPage.ChooseSourceFolderDialog.title=Folder Selection
@@ -25,7 +24,8 @@ AbstractFileCreationWizardPage.error.EnterSourceFolderName=Source folder name is
 AbstractFileCreationWizardPage.error.NotAFolder=''{0}'' is not a project or folder.
 AbstractFileCreationWizardPage.error.NotASourceFolder=Folder ''{0}'' is not a source folder.
 AbstractFileCreationWizardPage.error.ProjectClosed=Project ''{0}'' must be accessible.
-AbstractFileCreationWizardPagewarning.NotACProject=Folder is not a C/C++ project.
+AbstractFileCreationWizardPage.error.FolderDoesNotExist=Folder ''{0}'' does not exist.
+AbstractFileCreationWizardPage.warning.NotACProject=Folder is not a C/C++ project.
 AbstractFileCreationWizardPage.warning.NotInACProject=Folder is not in a C/C++ project.
 
 # ------- NewHeaderFileCreationWizard ------- 
